--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "local-links": "^1.4.0",
     "lodash": "^3.10.1",
     "marked": "^0.3.5",
+    "marky": "^1.2.0",
     "moment": "^2.10.6",
     "mongodb-collection-model": "^0.3.1",
     "mongodb-connection-model": "^6.4.3",
