--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "hadron-react-bson": "^0.3.0",
     "hadron-react-buttons": "^0.2.0",
     "hadron-reflux-store": "^0.0.2",
-    "hadron-style-manager": "0.0.1",
+    "hadron-style-manager": "^0.1.0",
     "hadron-type-checker": "^0.17.1",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
