COMPASS-864: Allow object <-> array type changes

--- a/package.json
+++ b/package.json
@@ -142,19 +142,19 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "https://github.com/FortAwesome/Font-Awesome/archive/v4.4.0.tar.gz",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^0.0.6",
+    "hadron-app": "^0.0.7",
     "hadron-app-registry": "^4.0.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
-    "hadron-document": "^1.3.0",
+    "hadron-document": "^1.5.0",
     "hadron-ipc": "^0.0.7",
     "hadron-module-cache": "^0.0.3",
-    "hadron-package-manager": "0.2.0",
+    "hadron-package-manager": "^1.0.0",
     "hadron-react-bson": "^0.3.0",
     "hadron-react-buttons": "^0.2.0",
     "hadron-reflux-store": "^0.0.2",
     "hadron-style-manager": "^0.1.0",
-    "hadron-type-checker": "^0.17.1",
+    "hadron-type-checker": "^1.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
     "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
