--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
-    "font-awesome": "https://github.com/FortAwesome/Font-Awesome/archive/v4.4.0.tar.gz",
+    "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
     "hadron-app": "^0.0.7",
     "hadron-app-registry": "^4.0.0",
@@ -191,7 +191,7 @@
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.2.1",
-    "react-fontawesome": "1.2.0",
+    "react-fontawesome": "^1.5.0",
     "react-native-listener": "^1.0.1",
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.6",
