--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
       "distributions": {
         "compass-lite": {
           "name": "Compass Lite",
-          "packages": []
+          "packages": [],
+          "styles": [ "index", "help" ]
         },
         "compass-enterprise": {
           "name": "Compass Enterprise",
-          "packages": []
+          "packages": [],
+          "styles": [ "index", "help" ]
         },
         "compass-charts": {
           "name": "Compass Charts",
-          "packages": []
+          "packages": [],
+          "styles": [ "index", "help" ]
         }
       },
       "build": {
@@ -218,7 +221,7 @@
     "electron": "1.6.1",
     "enzyme": "^2.5.1",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^7.6.0",
+    "hadron-build": "^8.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
     "mocha": "^3.1.2",
