--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "async": "^1.5.2",
     "backoff": "^2.4.1",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
-    "compass-serverstats": "git+ssh://git@github.com/10gen/compass-serverstats.git",
+    "compass-serverstats": "git+ssh://git@github.com/10gen/compass-serverstats.git#bd1cf97950a5ffcadb15541f3ba9997d54386b7f",
     "d3": "^3.5.6",
     "d3-flextree": "^1.0.3",
     "d3-timer": "^1.0.3",
@@ -142,7 +142,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^0.0.7",
+    "hadron-app": "^0.0.8",
     "hadron-app-registry": "^4.0.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
@@ -152,7 +152,7 @@
     "hadron-package-manager": "^1.0.0",
     "hadron-react-bson": "^0.3.0",
     "hadron-react-buttons": "^0.2.0",
-    "hadron-react-components": "^0.7.0",
+    "hadron-react-components": "^0.8.0",
     "hadron-reflux-store": "^0.0.2",
     "hadron-style-manager": "^0.1.0",
     "hadron-type-checker": "^1.2.0",
