--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "async": "^1.5.2",
     "backoff": "^2.4.1",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
-    "compass-serverstats": "git+ssh://git@github.com/10gen/compass-serverstats.git#676400bf075fa1c6a1711ef1adaa1c415f985a34",
+    "compass-serverstats": "git+ssh://git@github.com/10gen/compass-serverstats.git#v1.0.0",
     "d3": "^3.5.6",
     "d3-flextree": "^1.0.3",
     "d3-timer": "^1.0.3",
