--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
           "name": "compass-charts",
           "productName": "MongoDB Compass",
           "packages": [],
-          "styles": [ "index", "help" ]
+          "styles": [
+            "index",
+            "help"
+          ]
         }
       },
       "build": {
@@ -201,6 +204,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.6",
     "react-vega": "^2.3.1",
+    "react-virtualized": "^9.6.1",
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
