--- a/package.json
+++ b/package.json
@@ -229,7 +229,7 @@
     "react-addons-test-utils": "^15.2.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "spectron": "^3.6.0",
+    "hadron-spectron": "^0.0.1",
     "xvfb-maybe": "^0.1.3"
   },
   "precommit": [
