'npm run fmt': Cover the entire src and test directories of Compass
Note this command requires a manual 'npm install -g mongodb-js-fmt'.
It produces code which violates the current 'npm run check' tester, so I'll leave it for someone else to actually resolve.

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "ci": "npm run check && npm run test",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "fmt": "mongodb-js-fmt src/{**/*.js,*.js} test/{**/*.js,*.js}",
+    "fmt": "mongodb-js-fmt 'src/**/*{.js,.jsx}' 'test/**/*.js'",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
