Remove Xlib RANDR console spam on Travis
'Xlib:  extension "RANDR" missing on display ":99.0".'
http://stackoverflow.com/questions/12644001/how-to-add-the-missing-randr-extension

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
 before_script:
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - sh -e /etc/init.d/xvfb +extension RANDR start
   - npm run check
 script: npm run test
 cache:
