--- a/package.json
+++ b/package.json
@@ -101,11 +101,11 @@
     "pretest": "mongodb-runner install && mongodb-runner start --port 27018",
     "test": "hadron-build test",
     "posttest": "mongodb-runner stop --port 27018",
-    "check": "mongodb-js-precommit ./src/app/*.js ./src/app/**/**/*.js ./src/{app/**/*.js,main/**/*.js} ./test/**/*.js ./src/internal-packages/**/*.js ./src/internal-packages/**/**/*{.js,.jsx} ./src/internal-packages/**/**/**/*{.js,.jsx} ./src/internal-packages/**/**/**/**/*{.js,.jsx}",
+    "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "ci": "npm run check && npm run test",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "fmt": "mongodb-js-fmt ./*.js src/{**/*.js,*.js} test/{**/*.js,*.js}",
+    "fmt": "mongodb-js-fmt 'src/**/*{.js,.jsx}' 'test/**/*.js'",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
