--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.6",
     "react-vega": "^2.3.1",
+    "react-vega-lite": "0.0.1",
     "react-virtualized": "^9.6.1",
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
