COMPASS-1074: Make hadronApp global, fix prop type errors

--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-serverstats": "3.0.0",
+    "@mongodb-js/compass-serverstats": "4.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-collection-lodash-mixin": "^2.0.1",
@@ -158,7 +158,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^0.4.0",
+    "hadron-app": "^0.5.0",
     "hadron-app-registry": "^5.0.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
@@ -166,9 +166,9 @@
     "hadron-ipc": "^0.0.7",
     "hadron-module-cache": "^0.0.3",
     "hadron-package-manager": "^2.0.0",
-    "hadron-react-bson": "^0.3.0",
-    "hadron-react-buttons": "^0.11.1",
-    "hadron-react-components": "^0.10.0",
+    "hadron-react-bson": "^1.0.0",
+    "hadron-react-buttons": "^1.0.0",
+    "hadron-react-components": "^1.1.0",
     "hadron-reflux-store": "^0.0.2",
     "hadron-style-manager": "^0.1.0",
     "hadron-type-checker": "^2.0.0",
@@ -198,15 +198,16 @@
     "node-notifier": "^4.3.1",
     "numeral": "^1.5.3",
     "pluralize": "^1.2.1",
+    "prop-types": "^15.5.8",
     "qs": "^5.2.0",
     "raf": "^3.1.0",
-    "react": "^15.2.1",
-    "react-bootstrap": "0.30.2",
+    "react": "^15.5.4",
+    "react-bootstrap": "0.31.0",
     "react-click-outside": "^2.2.0",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
-    "react-dom": "^15.2.1",
-    "react-fontawesome": "^1.5.0",
+    "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "react-native-listener": "^1.0.1",
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.6",
