COMPASS-1087: Move plugins directories (#970)
* COMPASS-1087: Move plugins directories

* Update runner

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "compass-lite": {
           "name": "compass-lite",
           "productName": "MongoDB Compass",
+          "plugins-directory": ".mongodb/compass/plugins",
           "packages": [
             "node_modules/@mongodb-js/compass-serverstats"
           ],
@@ -44,6 +45,7 @@
         "compass-enterprise": {
           "name": "compass-enterprise",
           "productName": "MongoDB Compass Enterprise",
+          "plugins-directory": ".mongodb/compass-enterprise/plugins",
           "packages": [
             "node_modules/@mongodb-js/compass-serverstats"
           ],
@@ -55,6 +57,7 @@
         "compass-charts": {
           "name": "compass-charts",
           "productName": "MongoDB Compass Visualisations",
+          "plugins-directory": ".mongodb/compass-charts/plugins",
           "packages": [
             "node_modules/@mongodb-js/compass-serverstats"
           ],
@@ -244,7 +247,7 @@
     "mocha": "^3.1.2",
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.2.9",
-    "mongodb-runner": "^3.4.0",
+    "mongodb-runner": "^3.5.0",
     "react-addons-test-utils": "^15.2.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
