--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
 before_script:
+  - mkdir ~/.mongodb
+  - mkdir ~/.mongodb/runner
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm run check
