--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ node_js:
   - 7.4
 env:
   matrix:
-    - MONGODB_VERSION=2.6.x MONGODB_TOPOLOGY=standalone
-    - MONGODB_VERSION=3.0.x MONGODB_TOPOLOGY=standalone
-    - MONGODB_VERSION=3.2.x MONGODB_TOPOLOGY=standalone
-    - MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
+    - DEBUG=mongo* MONGODB_VERSION=2.6.x MONGODB_TOPOLOGY=standalone
+    - DEBUG=mongo* MONGODB_VERSION=3.0.x MONGODB_TOPOLOGY=standalone
+    - DEBUG=mongo* MONGODB_VERSION=3.2.x MONGODB_TOPOLOGY=standalone
+    - DEBUG=mongo* MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
   global:
     secure: kx+3p/x5hEju6fKYzb0SCk9VJLq6bOxrizCQ/skvRB9OwiQUFm68KHDRys6DonUgudfJK9QF+2IvTPo7V+6bzh15hNDd4TnMuz/L9Fcb7+BwTENwjRKlWltuWBtLbJ+XxOeCAg2uWT7D8bH5S2NADIboIVUstAqNM9LKw9V9BVc=
 addons:
@@ -20,8 +20,6 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
 before_script:
-  - mkdir ~/.mongodb
-  - mkdir ~/.mongodb/runner
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm run check
