--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "react-click-outside": "^2.2.0",
     "react-dom": "^15.2.1",
     "react-fontawesome": "1.2.0",
-    "react-native-listener": "^1.0.1",
+    "react-native-listener": "1.0.1",
     "react-tooltip": "^3.2.6",
     "react-vega": "^2.3.1",
     "reflux": "0.4.1",
