--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ node_js:
   - 7.4
 env:
   matrix:
-    - DEBUG=mongo* MONGODB_VERSION=2.6.x MONGODB_TOPOLOGY=standalone
-    - DEBUG=mongo* MONGODB_VERSION=3.0.x MONGODB_TOPOLOGY=standalone
-    - DEBUG=mongo* MONGODB_VERSION=3.2.x MONGODB_TOPOLOGY=standalone
-    - DEBUG=mongo* MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
+    - MONGODB_VERSION=2.6.x MONGODB_TOPOLOGY=standalone
+    - MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
   global:
     secure: kx+3p/x5hEju6fKYzb0SCk9VJLq6bOxrizCQ/skvRB9OwiQUFm68KHDRys6DonUgudfJK9QF+2IvTPo7V+6bzh15hNDd4TnMuz/L9Fcb7+BwTENwjRKlWltuWBtLbJ+XxOeCAg2uWT7D8bH5S2NADIboIVUstAqNM9LKw9V9BVc=
 addons:
@@ -25,8 +23,6 @@ before_script:
   - npm run check
   - mkdir -p /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/
   - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-2.6.12.tgz
-  - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.0.14.tgz
-  - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.2.13.tgz
   - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.4.tgz
 script: npm run test
 cache:
