COMPASS-1171: Backport GUID fix to 1.7-releases (#994)
* COMPASS-1171: Backport GUID fix to 1.7-releases

npm install --save hadron-react-bson@0.3.1

* Update runner

* .travis.yml: Add hack to pre-download all MongoDB versions (#976)

- Easy to revert when we figure out what's broken in MongoDB runner's download attempt, on TravisCI only, current details:
[with DEBUG=* in pretest hook] https://travis-ci.com/10gen/compass/jobs/74697493
[master] https://travis-ci.com/10gen/compass/jobs/74698184
- Should allow us to review other PRs to Compass without checking manually, unblocking high priority plugins workshop stuff
- Yes this is fragile and will break at the next point release of any of these MongoDB versions

* Peg react-native-listener @ 1.0.1

From https://github.com/10gen/compass/commit/8a176ff33ac2003849e2d7c5e9e258d6438bb577

To see if was what resolves:

  1) <Minichart /> when using unique data of type `Long` has a unique bubble for each datum:
     Invariant Violation: Element type is invalid: expected a string (for built-in components) or a class/function (for composite components) but got: object. Check the render method of `UniqueMinichart`.

--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "hadron-ipc": "^0.0.7",
     "hadron-module-cache": "^0.0.3",
     "hadron-package-manager": "0.2.0",
-    "hadron-react-bson": "^0.3.0",
+    "hadron-react-bson": "^0.3.1",
     "hadron-react-buttons": "^0.2.0",
     "hadron-reflux-store": "^0.0.2",
     "hadron-style-manager": "0.0.1",
@@ -174,7 +174,7 @@
     "react-click-outside": "^2.2.0",
     "react-dom": "^15.2.1",
     "react-fontawesome": "1.2.0",
-    "react-native-listener": "^1.0.1",
+    "react-native-listener": "1.0.1",
     "react-tooltip": "^3.2.6",
     "react-vega": "^2.3.1",
     "reflux": "0.4.1",
@@ -205,7 +205,7 @@
     "mocha": "^3.1.2",
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.2.9",
-    "mongodb-runner": "^3.4.0",
+    "mongodb-runner": "^3.5.0",
     "react-addons-test-utils": "^15.2.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
