--- a/package.json
+++ b/package.json
@@ -137,8 +137,8 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-document-validation": "2.0.0",
-    "@mongodb-js/compass-serverstats": "8.0.0",
+    "@mongodb-js/compass-document-validation": "3.0.0-beta.0",
+    "@mongodb-js/compass-serverstats": "9.0.0-beta.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-collection-lodash-mixin": "^2.0.1",
@@ -192,12 +192,12 @@
     "marky": "^1.2.0",
     "moment": "^2.10.6",
     "mongodb-collection-model": "^0.3.1",
-    "mongodb-connection-model": "^8.0.0-beta.0",
-    "mongodb-data-service": "^4.0.0-beta.1",
+    "mongodb-connection-model": "^8.0.0-beta.1",
+    "mongodb-data-service": "^4.0.0-beta.2",
     "mongodb-database-model": "^0.1.2",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.9.0",
-    "mongodb-instance-model": "^3.3.0",
+    "mongodb-instance-model": "^4.0.0",
     "mongodb-js-metrics": "^1.6.0",
     "mongodb-language-model": "^1.1.0",
     "mongodb-ns": "^1.0.3",
