--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^0.9.0",
+    "hadron-app": "^0.10.0",
     "hadron-app-registry": "^5.3.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
@@ -196,8 +196,8 @@
     "marky": "^1.2.0",
     "moment": "^2.10.6",
     "mongodb-collection-model": "^0.3.1",
-    "mongodb-connection-model": "^8.0.0-beta.1",
-    "mongodb-data-service": "^4.0.0-beta.2",
+    "mongodb-connection-model": "^8.0.0",
+    "mongodb-data-service": "^4.0.0",
     "mongodb-database-model": "^0.1.2",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.9.0",
