--- a/package.json
+++ b/package.json
@@ -140,9 +140,9 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-deployment-awareness": "1.0.0-beta.4",
-    "@mongodb-js/compass-document-validation": "3.0.0-beta.3",
-    "@mongodb-js/compass-serverstats": "9.0.0-beta.0",
+    "@mongodb-js/compass-deployment-awareness": "1.0.0",
+    "@mongodb-js/compass-document-validation": "3.0.0",
+    "@mongodb-js/compass-serverstats": "9.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-collection-lodash-mixin": "^2.0.1",
@@ -171,8 +171,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^0.10.0",
-    "hadron-app-registry": "^5.3.0",
+    "hadron-app": "^0.11.0",
+    "hadron-app-registry": "^6.0.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
     "hadron-document": "^2.1.1",
