COMPASS-1212: Fix Evergreen Ubuntu keytar build failure (#1038)
* COMPASS-1212: Solution for keytar install failure

* Well that didn't work... any chance we have sudo?

* Or maybe it will pick up just in local cwd?

* Huh. Somehow we have sudo now? Cool beans.

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -322,6 +322,14 @@ tasks:
         cp ./libsecret-1.so.0 /usr/lib64/libsecret-1.so.0
     variants:
       - rhel
+  - command: shell.exec
+    params:
+      working_dir: src
+      script: |
+        set -ev
+        sudo apt-get install --yes libsecret-1-0 libsecret-1-dev
+    variants:
+      - ubuntu
   - func: "configure"
   - func: "install"
   - command: expansions.update
