--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "MongoDB Compass",
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
-  "version": "1.7.0-beta.1",
+  "version": "1.7.0",
   "main": "src/main.js",
   "author": {
     "name": "MongoDB Inc",
