Fixing instance-model

--- a/package.json
+++ b/package.json
@@ -195,16 +195,16 @@
     "marky": "^1.2.0",
     "moment": "^2.10.6",
     "mongodb-collection-model": "^0.3.2",
-    "mongodb-connection-model": "^8.0.1",
-    "mongodb-data-service": "^4.0.2",
+    "mongodb-connection-model": "^9.0.0-beta.0",
+    "mongodb-data-service": "^5.0.0-beta.2",
     "mongodb-database-model": "^0.1.2",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.9.0",
-    "mongodb-instance-model": "^4.1.1",
+    "mongodb-instance-model": "^5.0.0-beta.1",
     "mongodb-js-metrics": "^1.6.0",
     "mongodb-language-model": "^1.1.0",
     "mongodb-ns": "^2.0.0",
-    "mongodb-schema": "^6.1.1",
+    "mongodb-schema": "^7.0.0-beta.0",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-notifier": "^4.3.1",
