:green_heart: Fix engines.npm to allow for npm@4 or npm@5

--- a/package.json
+++ b/package.json
@@ -266,7 +266,7 @@
   ],
   "engines": {
     "node": "^7.4.0",
-    "npm": "^5.0.0"
+    "npm": "^4.0.0 || ^5.0.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
