COMPASS-939: Autocomplete working

--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "async": "^1.5.2",
     "backoff": "^2.4.1",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
-    "codemirror-mongodb": "0.0.1",
+    "codemirror-mongodb": "^0.2.1",
     "create-react-class": "^15.5.2",
     "d3": "^3.5.6",
     "d3-flextree": "^1.0.3",
@@ -201,12 +201,13 @@
     "mongodb-js-metrics": "^1.6.0",
     "mongodb-language-model": "^1.1.0",
     "mongodb-ns": "^2.0.0",
-    "mongodb-query-parser": "^0.2.0",
+    "mongodb-query-parser": "^0.2.2",
     "mongodb-schema": "^7.0.0",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-notifier": "^4.3.1",
     "numeral": "^1.5.3",
+    "object-diff": "0.0.4",
     "pluralize": "^1.2.1",
     "prop-types": "^15.5.8",
     "qs": "^5.2.0",
