--- a/package.json
+++ b/package.json
@@ -224,7 +224,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.6",
     "react-vega": "^3.0.1",
-    "react-vega-lite": "0.0.1",
+    "react-vega-lite": "^1.0.1",
     "react-virtualized": "^9.6.1",
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
@@ -234,7 +234,7 @@
     "turf-distance": "^1.1.0",
     "turf-point": "^2.0.1",
     "uuid": "^3.0.0",
-    "vega-lite": "^1.3.1"
+    "vega-lite": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
