--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "MongoDB Compass",
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
-  "version": "1.8.0-dev",
+  "version": "1.8.0-beta.0",
   "main": "src/main.js",
   "author": {
     "name": "MongoDB Inc",
