--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -95,7 +95,7 @@ functions:
         ls -alh dist || true;
 
         # Upload release assets to S3 and GitHub
-        npm run upload ${compass_distribution}
+        DEBUG=* npm run upload ${compass_distribution}
         EOF_BUILD_SH
 
         #
