--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "turf-distance": "^1.1.0",
     "turf-point": "^2.0.1",
     "uuid": "^3.0.0",
+    "vega": "^3.0.0-beta.30",
     "vega-lite": "^2.0.0-beta.4"
   },
   "devDependencies": {
