--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
-            "index",
-            "help"
+            "index"
           ]
         },
         "compass-enterprise": {
@@ -55,8 +54,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
-            "index",
-            "help"
+            "index"
           ]
         },
         "compass-charts": {
@@ -69,8 +67,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
-            "index",
-            "help"
+            "index"
           ]
         }
       },
@@ -249,7 +246,7 @@
     "electron": "1.6.1",
     "enzyme": "^2.5.1",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^13.0.9",
+    "hadron-build": "^13.0.10",
     "hadron-spectron": "^1.0.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
