COMPASS 1306 Remove help from distributions

--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
-            "index",
-            "help"
+            "index"
           ]
         }
       },
