--- a/package.json
+++ b/package.json
@@ -215,7 +215,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "0.31.0",
     "react-click-outside": "^2.2.0",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror": "durran/react-codemirror#fix-update",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.5.4",
