--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "async": "^1.5.2",
     "backoff": "^2.4.1",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
+    "codemirror-mongodb": "^0.4.5",
     "create-react-class": "^15.5.2",
     "d3": "^3.5.6",
     "d3-flextree": "^1.0.3",
@@ -177,7 +178,7 @@
     "hadron-package-manager": "^4.0.0",
     "hadron-react-bson": "^1.4.0",
     "hadron-react-buttons": "^1.5.0",
-    "hadron-react-components": "^1.3.0",
+    "hadron-react-components": "^1.7.0",
     "hadron-style-manager": "^0.1.0",
     "hadron-type-checker": "^2.0.0",
     "highlight.js": "^8.9.1",
@@ -195,16 +196,18 @@
     "mongodb-data-service": "^5.1.0",
     "mongodb-database-model": "^0.1.2",
     "mongodb-explain-plan-model": "^0.2.2",
-    "mongodb-extended-json": "^1.9.0",
+    "mongodb-extended-json": "^1.10.0",
     "mongodb-instance-model": "^5.0.0",
     "mongodb-js-metrics": "^1.6.0",
     "mongodb-language-model": "^1.1.0",
     "mongodb-ns": "^2.0.0",
+    "mongodb-query-parser": "^0.6.0",
     "mongodb-schema": "^7.0.0",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-notifier": "^4.3.1",
     "numeral": "^1.5.3",
+    "object-diff": "0.0.4",
     "pluralize": "^1.2.1",
     "prop-types": "^15.5.8",
     "qs": "^5.2.0",
@@ -212,6 +215,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "0.31.0",
     "react-click-outside": "^2.2.0",
+    "react-codemirror": "durran/react-codemirror#fix-update",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.5.4",
@@ -263,7 +267,7 @@
   ],
   "engines": {
     "node": "^7.4.0",
-    "npm": "^4.0.0"
+    "npm": "^4.0.0 || ^5.0.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
