--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "less-cache": "^0.23.0",
     "local-links": "^1.4.0",
     "lodash": "^3.10.1",
+    "mapbox-gl": "^0.39.1",
     "marked": "^0.3.5",
     "marky": "^1.2.0",
     "moment": "^2.10.6",
